--- a/lolwatcher/src/components/users/ReportModal.css
+++ b/lolwatcher/src/components/users/ReportModal.css
@@ -1,7 +1,7 @@
 .modal-container {
   width: 100%;
   display: flex;
-  z-index: 1;
+  z-index: 999;
   text-align: center;
   padding-block: 20px;
   gap: 30px;
